--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -18,15 +18,17 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     
+    set $upstream sonarqube:9000;
+
     location / {
 	proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
 
-        proxy_pass          http://sonarqube:9000;
+        proxy_pass          http://$upstream;
         proxy_read_timeout  90;
 
-        proxy_redirect      http://sonarqube:9000 https://newsonar.spatz.wtf;
+        proxy_redirect      http://$upstream https://newsonar.spatz.wtf;
     }
 }
