--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,9 @@ services:
     environment:
       - sonar.jdbc.url=jdbc:postgresql://db:5432/sonar
     volumes:
-      - ./data/sonarqube_conf:/opt/sonarqube/conf
-      - ./data/sonarqube_data:/opt/sonarqube/data
-      - ./data/sonarqube_extensions:/opt/sonarqube/extensions
+      - sonarqube_conf:/opt/sonarqube/conf
+      - sonarqube_data:/opt/sonarqube/data
+      - sonarqube_extensions:/opt/sonarqube/extensions
 
   db:
     image: postgres
@@ -51,3 +51,6 @@ networks:
 volumes:
   postgresql:
   postgresql_data:
+  sonarqube_conf:
+  sonarqube_data:
+  sonarqube_extensions:
