specify resolver to fix nginx

--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -12,6 +12,9 @@ server {
     listen 443 ssl;
     server_name newsonar.spatz.wtf;
 
+    # this is the internal Docker DNS, cache only for 30s
+    resolver 127.0.0.11 valid=30s;
+
     ssl_certificate /etc/letsencrypt/live/newsonar.spatz.wtf/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/newsonar.spatz.wtf/privkey.pem;
 
