Allow larger file upload through nginx

--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -15,6 +15,8 @@ server {
     # this is the internal Docker DNS, cache only for 30s
     resolver 127.0.0.11 valid=30s;
 
+    client_max_body_size 128M;
+
     ssl_certificate /etc/letsencrypt/live/newsonar.spatz.wtf/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/newsonar.spatz.wtf/privkey.pem;
 
