--- a/init-letsencrypt.template
+++ b/init-letsencrypt.template
@@ -9,7 +9,7 @@ domains=({{ inventory_hostname }})
 rsa_key_size=4096
 data_path="./data/certbot"
 email="{{ letsencrypt_email }}" # Adding a valid address is strongly recommended
-staging=1 # Set to 1 if you're testing your setup to avoid hitting request limits
+staging={{ letsencrypt_staging | default('0') }} # Set to 1 if you're testing your setup to avoid hitting request limits
 
 if [ ! -e "$data_path/conf/options-ssl-nginx.conf" ] || [ ! -e "$data_path/conf/ssl-dhparams.pem" ]; then
   echo "### Downloading recommended TLS parameters ..."
